--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@cenk1cenk2/md-printer",
   "version": "2.14.0",
   "description": "A markdown printer.",
-  "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "type": "module",
   "repository": "https://gitlab.kilic.dev/utils/md-printer",
   "author": "Cenk Kilic",
@@ -49,7 +49,7 @@
     "dirname": "md-printer",
     "commands": {
       "strategy": "single",
-      "target": "./dist/commands/index.js"
+      "target": "./dist/commands/index.mjs"
     },
     "plugins": [
       "@oclif/plugin-help"
@@ -63,7 +63,7 @@
     "topicSeparator": " "
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   },
   "keywords": [
     "oclif",
@@ -77,8 +77,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.16",
-    "@tsconfig/node20": "^20.1.6",
-    "chokidar": "^4.0.3",
+    "chokidar": "^5.0.0",
     "fs-extra": "^11.3.1",
     "get-port": "^7.1.0",
     "gray-matter": "^4.0.3",
@@ -95,6 +94,7 @@
   "devDependencies": {
     "@cenk1cenk2/cz-cc": "^2.1.5",
     "@cenk1cenk2/eslint-config": "^3.1.69",
+    "@tsconfig/node24": "^24.0.3",
     "@types/config": "^3.3.5",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^24.3.1",
@@ -102,7 +102,7 @@
     "@types/showdown": "^2.0.6",
     "eslint": "^9.35.0",
     "execa": "^9.6.0",
-    "globby": "^15.0.0",
+    "globby": "^16.1.0",
     "lint-staged": "^16.1.6",
     "oclif": "^4.22.18",
     "prettier": "^3.6.2",
